Add readme.md and some basic input checks to help to find configuration mistakes

--- a/.traefik.yml
+++ b/.traefik.yml
@@ -1,4 +1,4 @@
-displayName: "Environment variable mapping to header"
+displayName: "Environment Headers"
 type: middleware
 
 import: github.com/nilskohrs/environmentheader
